--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -12,8 +12,8 @@ es:
         user: Usuario
     models:
       spree/review:
-        one: una valoración
-        other: "%{count} valoraciones"
+        one: un comentario
+        other: "%{count} comentarios"
     errors:
       models:
         spree/review:
@@ -30,37 +30,37 @@ es:
     approved_reviews: Aprobado
     approved_text: "Los comentarios desbloqueados serán publicados en 1-2 días laborales."
     average_customer_rating: "Puntuación media"
-    back_reviews: "Volver a las valoraciones"
+    back_reviews: "Volver a los comentarios"
     based_upon_review_count:
-      one: "basado en una valoración"
-      other: "basado en %{count} valoraciones"
+      one: "basado en un comentario"
+      other: "basado en %{count} comentarios"
     by: por
-    editing_review_for_html: 'Editando la valoración para %{link}'
-    error_approve_review: "Error aprobando la valoración"
-    error_no_product: "El producto valorado ya no existe"
+    editing_review_for_html: 'Editando el comentario para %{link}'
+    error_approve_review: "Error aprobando el comentario"
+    error_no_product: "El producto comentado ya no existe"
     feedback: Feedback
     feedback_review_for: "Review: '%{review}'"
     for: para
     from: desde
-    info_approve_review: "Valoración aprobada"
-    leave_us_a_review_for: "Por favor, déjanos una valoración para %{name}"
-    no_reviews_available: "No hay ninguna valoración para este producto."
+    info_approve_review: "Comentario aprobado"
+    leave_us_a_review_for: "Por favor, déjanos un comentario para %{name}"
+    no_reviews_available: "No hay ningun comentario para este producto."
     out_of_5: "de 5"
     rating: puntuación
-    reviews: Valoraciones
+    reviews: Comentarios
     admin:
       tab:
-        reviews: Valoraciones
-        review_management: "Valoraciones"
-    review_successfully_submitted: "La valoración se ha enviado correctamente"
+        reviews: Comentarios
+        review_management: "Comentarios"
+    review_successfully_submitted: "El comentario se ha enviado correctamente"
     spree_reviews:
       feedback_rating: "Puntuación en el feedback"
       display_unapproved: "Mostrar comentarios no aprobados en los listados"
-      include_unapproved: "Incluir en los listados las valoraciones sin aprobar"
-      manage_review_settings: "Gestionar la publicación de valoraciones"
-      preview_size: "Tamaño de la versión resumida de la valoración"
+      include_unapproved: "Incluir en los listados los comentarios sin aprobar"
+      manage_review_settings: "Gestionar la publicación de comentarios"
+      preview_size: "Tamaño de la versión resumida del comentario"
       require_login: "Requerir que el usuario esté logado"
-      review_settings: "Configuración de las Valoraciones"
+      review_settings: "Configuración de los Comentarios"
       show_email: "Mostrar las direcciones de correo"
       show_verified_purchaser: Mostrar comprador verificado
       track_locale: "Rastrear el locale del usuario"
@@ -69,13 +69,13 @@ es:
       one: "1"
       other: "%{count}"
     stars: Estrellas
-    submit_your_review: "Envía tu valoración"
+    submit_your_review: "Envía tu comentario"
     submitted_on: "Enviada el"
     unapproved_reviews: "Sin aprobar"
     verified_purchaser: Comprador verificado
     voice:
       one: "1 voz"
       other: "%{count} voces"
-    was_this_review_helpful: "¿Te ha sido útil esta valoración?"
-    write_your_own_review: "Escribe tu propia valoración"
+    was_this_review_helpful: "¿Te ha sido útil esta comentario?"
+    write_your_own_review: "Escribe tu propio comentario"
     anonymous: Anónimo
